@@ -1,3 +1,8 @@
+2010-10-12  Teika kazura <teika@lavabit.com>
+	* lisp/sawfish/wm/menus.jl: "Poweroff" bugfix.
+	In 1.7.0, poweroff related commands under root-menu -> session can't
+	be invoked. This is fixed.
+
 2010-10-09  Teika kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/integration/gnome.jl
 	* lisp/sawfish/wm/integration/kde.jl
